// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graph pipeline (golden set) assigns a flat mid-range size and a single community to a cycle of equal-degree notes 1`] = `
{
  "allNotesVeryShort": false,
  "edges": [
    {
      "data": {
        "id": "11111111111111111111111111111111::22222222222222222222222222222222::link",
        "source": "11111111111111111111111111111111",
        "target": "22222222222222222222222222222222",
        "type": "link",
      },
    },
    {
      "data": {
        "id": "22222222222222222222222222222222::33333333333333333333333333333333::link",
        "source": "22222222222222222222222222222222",
        "target": "33333333333333333333333333333333",
        "type": "link",
      },
    },
    {
      "data": {
        "id": "11111111111111111111111111111111::33333333333333333333333333333333::link",
        "source": "11111111111111111111111111111111",
        "target": "33333333333333333333333333333333",
        "type": "link",
      },
    },
  ],
  "nodes": [
    {
      "data": {
        "community": 0,
        "degree": 2,
        "id": "11111111111111111111111111111111",
        "label": "Alpha",
        "noteId": "11111111111111111111111111111111",
        "size": 5,
      },
    },
    {
      "data": {
        "community": 0,
        "degree": 2,
        "id": "22222222222222222222222222222222",
        "label": "Beta",
        "noteId": "22222222222222222222222222222222",
        "size": 5,
      },
    },
    {
      "data": {
        "community": 0,
        "degree": 2,
        "id": "33333333333333333333333333333333",
        "label": "Gamma",
        "noteId": "33333333333333333333333333333333",
        "size": 5,
      },
    },
  ],
}
`;

exports[`graph pipeline (golden set) groups disconnected notes by keyword when the graph is too sparse for Louvain 1`] = `
{
  "allNotesVeryShort": true,
  "edges": [],
  "nodes": [
    {
      "data": {
        "community": 0,
        "degree": 0,
        "id": "11111111111111111111111111111111",
        "label": "Gardening Basics",
        "noteId": "11111111111111111111111111111111",
        "size": 5,
      },
    },
    {
      "data": {
        "community": 0,
        "degree": 0,
        "id": "22222222222222222222222222222222",
        "label": "Gardening Tools",
        "noteId": "22222222222222222222222222222222",
        "size": 5,
      },
    },
    {
      "data": {
        "community": 1,
        "degree": 0,
        "id": "33333333333333333333333333333333",
        "label": "Cooking Pasta",
        "noteId": "33333333333333333333333333333333",
        "size": 5,
      },
    },
    {
      "data": {
        "community": 1,
        "degree": 0,
        "id": "44444444444444444444444444444444",
        "label": "Cooking Pizza",
        "noteId": "44444444444444444444444444444444",
        "size": 5,
      },
    },
    {
      "data": {
        "community": 2,
        "degree": 0,
        "id": "55555555555555555555555555555555",
        "label": "Photography",
        "noteId": "55555555555555555555555555555555",
        "size": 5,
      },
    },
  ],
}
`;

exports[`graph pipeline (golden set) keeps a sub-floor linked pair as a link edge without manufacturing a semantic edge 1`] = `
{
  "allNotesVeryShort": false,
  "edges": [
    {
      "data": {
        "id": "11111111111111111111111111111111::22222222222222222222222222222222::link",
        "source": "11111111111111111111111111111111",
        "target": "22222222222222222222222222222222",
        "type": "link",
      },
    },
  ],
  "nodes": [
    {
      "data": {
        "community": 0,
        "degree": 1,
        "id": "11111111111111111111111111111111",
        "label": "Alpha",
        "noteId": "11111111111111111111111111111111",
        "size": 5,
      },
    },
    {
      "data": {
        "community": 0,
        "degree": 1,
        "id": "22222222222222222222222222222222",
        "label": "Beta",
        "noteId": "22222222222222222222222222222222",
        "size": 5,
      },
    },
  ],
}
`;

exports[`graph pipeline (golden set) merges every shared tag onto a single tag edge 1`] = `
{
  "allNotesVeryShort": true,
  "edges": [
    {
      "data": {
        "id": "11111111111111111111111111111111::22222222222222222222222222222222::tag",
        "source": "11111111111111111111111111111111",
        "tagName": "alpha, beta",
        "target": "22222222222222222222222222222222",
        "type": "tag",
      },
    },
  ],
  "nodes": [
    {
      "data": {
        "community": 0,
        "degree": 1,
        "id": "11111111111111111111111111111111",
        "label": "Alpha",
        "noteId": "11111111111111111111111111111111",
        "size": 10,
      },
    },
    {
      "data": {
        "community": 0,
        "degree": 1,
        "id": "22222222222222222222222222222222",
        "label": "Beta",
        "noteId": "22222222222222222222222222222222",
        "size": 10,
      },
    },
    {
      "data": {
        "community": 1,
        "degree": 0,
        "id": "33333333333333333333333333333333",
        "label": "Gamma",
        "noteId": "33333333333333333333333333333333",
        "size": 1,
      },
    },
  ],
}
`;

exports[`graph pipeline (golden set) renders the semantic graph end-to-end from embeddings through thresholding and top-K 1`] = `
{
  "allNotesVeryShort": false,
  "edges": [
    {
      "data": {
        "id": "11111111111111111111111111111111::22222222222222222222222222222222::link",
        "source": "11111111111111111111111111111111",
        "target": "22222222222222222222222222222222",
        "type": "link",
      },
    },
    {
      "data": {
        "id": "11111111111111111111111111111111::22222222222222222222222222222222::tag",
        "source": "11111111111111111111111111111111",
        "tagName": "project",
        "target": "22222222222222222222222222222222",
        "type": "tag",
      },
    },
    {
      "data": {
        "id": "11111111111111111111111111111111::22222222222222222222222222222222::semantic",
        "score": 1.15,
        "source": "11111111111111111111111111111111",
        "target": "22222222222222222222222222222222",
        "type": "semantic",
      },
    },
  ],
  "nodes": [
    {
      "data": {
        "community": 0,
        "degree": 3,
        "id": "11111111111111111111111111111111",
        "label": "Alpha",
        "noteId": "11111111111111111111111111111111",
        "size": 10,
      },
    },
    {
      "data": {
        "community": 0,
        "degree": 3,
        "id": "22222222222222222222222222222222",
        "label": "Beta",
        "noteId": "22222222222222222222222222222222",
        "size": 10,
      },
    },
    {
      "data": {
        "community": 1,
        "degree": 0,
        "id": "33333333333333333333333333333333",
        "label": "Gamma",
        "noteId": "33333333333333333333333333333333",
        "size": 1,
      },
    },
  ],
}
`;

exports[`graph pipeline (golden set) renders the structural graph end-to-end from links, tags, communities and centrality 1`] = `
{
  "allNotesVeryShort": false,
  "edges": [
    {
      "data": {
        "id": "11111111111111111111111111111111::22222222222222222222222222222222::link",
        "source": "11111111111111111111111111111111",
        "target": "22222222222222222222222222222222",
        "type": "link",
      },
    },
    {
      "data": {
        "id": "11111111111111111111111111111111::33333333333333333333333333333333::link",
        "source": "11111111111111111111111111111111",
        "target": "33333333333333333333333333333333",
        "type": "link",
      },
    },
    {
      "data": {
        "id": "22222222222222222222222222222222::33333333333333333333333333333333::link",
        "source": "22222222222222222222222222222222",
        "target": "33333333333333333333333333333333",
        "type": "link",
      },
    },
    {
      "data": {
        "id": "11111111111111111111111111111111::44444444444444444444444444444444::link",
        "source": "11111111111111111111111111111111",
        "target": "44444444444444444444444444444444",
        "type": "link",
      },
    },
    {
      "data": {
        "id": "11111111111111111111111111111111::22222222222222222222222222222222::tag",
        "source": "11111111111111111111111111111111",
        "tagName": "project",
        "target": "22222222222222222222222222222222",
        "type": "tag",
      },
    },
    {
      "data": {
        "id": "11111111111111111111111111111111::44444444444444444444444444444444::tag",
        "source": "11111111111111111111111111111111",
        "tagName": "todo",
        "target": "44444444444444444444444444444444",
        "type": "tag",
      },
    },
  ],
  "nodes": [
    {
      "data": {
        "community": 0,
        "degree": 5,
        "id": "11111111111111111111111111111111",
        "label": "Alpha Note",
        "noteId": "11111111111111111111111111111111",
        "size": 10,
      },
    },
    {
      "data": {
        "community": 0,
        "degree": 3,
        "id": "22222222222222222222222222222222",
        "label": "Beta",
        "noteId": "22222222222222222222222222222222",
        "size": 8,
      },
    },
    {
      "data": {
        "community": 0,
        "degree": 2,
        "id": "33333333333333333333333333333333",
        "label": "Gamma",
        "noteId": "33333333333333333333333333333333",
        "size": 7,
      },
    },
    {
      "data": {
        "community": 0,
        "degree": 2,
        "id": "44444444444444444444444444444444",
        "label": "(untitled)",
        "noteId": "44444444444444444444444444444444",
        "size": 7,
      },
    },
    {
      "data": {
        "community": 1,
        "degree": 0,
        "id": "55555555555555555555555555555555",
        "label": "EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE...",
        "noteId": "55555555555555555555555555555555",
        "size": 1,
      },
    },
    {
      "data": {
        "community": 2,
        "degree": 0,
        "id": "66666666666666666666666666666666",
        "label": "Standalone",
        "noteId": "66666666666666666666666666666666",
        "size": 1,
      },
    },
  ],
}
`;
